--- a/book/pom.xml
+++ b/book/pom.xml
@@ -29,7 +29,7 @@ along with ao-payments-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<relativePath>../../../parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.aoapps</groupId><artifactId>ao-payments-stripe-book</artifactId><version>2.0.0</version>
+	<groupId>com.aoapps</groupId><artifactId>ao-payments-stripe-book</artifactId><version>2.0.0-POST-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<properties>
@@ -74,7 +74,7 @@ along with ao-payments-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<connection>scm:git:git://github.com/aoindustries/ao-payments-stripe.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/ao-payments-stripe.git</developerConnection>
 		<url>https://github.com/aoindustries/ao-payments-stripe</url>
-		<tag>ao-payments-stripe-book-2.0.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
