--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@ along with ao-payments-stripe.  If not, see <http://www.gnu.org/licenses />.
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId>
 						<configuration>
-							<offlineLinks>
+							<offlineLinks combine.children="append">
 								<!-- Direct -->
 								<offlineLink>
 									<url>https://oss.aoapps.com/collections/apidocs/</url>
@@ -174,11 +174,6 @@ along with ao-payments-stripe.  If not, see <http://www.gnu.org/licenses />.
 								<offlineLink>
 									<url>https://javadoc.io/doc/com.stripe/stripe-java/${stripe-java.version}/</url>
 									<location>${project.build.directory}/offlineLinks/com.stripe/stripe-java</location>
-								</offlineLink>
-								<!-- Java SE -->
-								<offlineLink>
-									<url>${javadoc.link.javase}</url>
-									<location>${project.build.directory}/offlineLinks/com/aoapps/javadoc/offline/javase/${javase.release}</location>
 								</offlineLink>
 							</offlineLinks>
 						</configuration>
