--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@ along with ao-payments-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<description.html><![CDATA[Provider for <a target="${javadoc.target}" href="https://stripe.com/">Stripe</a>.]]></description.html>
 		<!-- SonarQube -->
 		<sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
-		<sonar.organization>aoindustries</sonar.organization>
+		<sonar.organization>ao-apps</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<!-- TODO: Implement tests -->
 		<sonar.coverage.exclusions>**.*</sonar.coverage.exclusions>
@@ -78,20 +78,20 @@ along with ao-payments-stripe.  If not, see <http://www.gnu.org/licenses />.
 	</developers>
 
 	<scm>
-		<connection>scm:git:git://github.com/aoindustries/ao-payments-stripe.git</connection>
-		<developerConnection>scm:git:git@github.com:aoindustries/ao-payments-stripe.git</developerConnection>
-		<url>https://github.com/aoindustries/ao-payments-stripe</url>
+		<connection>scm:git:git://github.com/ao-apps/ao-payments-stripe.git</connection>
+		<developerConnection>scm:git:git@github.com:ao-apps/ao-payments-stripe.git</developerConnection>
+		<url>https://github.com/ao-apps/ao-payments-stripe</url>
 		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
 		<system>GitHub Issues</system>
-		<url>https://github.com/aoindustries/ao-payments-stripe/issues</url>
+		<url>https://github.com/ao-apps/ao-payments-stripe/issues</url>
 	</issueManagement>
 
 	<ciManagement>
 		<system>GitHub Actions</system>
-		<url>https://github.com/aoindustries/ao-payments-stripe/actions</url>
+		<url>https://github.com/ao-apps/ao-payments-stripe/actions</url>
 	</ciManagement>
 
 	<repositories>
