--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 ao-payments-stripe - Provider for Stripe.
-Copyright (C) 2016, 2017, 2018, 2019, 2020, 2021  AO Industries, Inc.
+Copyright (C) 2016, 2017, 2018, 2019, 2020, 2021, 2022  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -46,7 +46,7 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
 		<sonar.coverage.exclusions>**.*</sonar.coverage.exclusions>
 		<!-- Dependencies -->
 		<commons-lang3.version>3.12.0</commons-lang3.version>
-		<stripe-java.version>20.94.0</stripe-java.version>
+		<stripe-java.version>20.95.0</stripe-java.version>
 	</properties>
 
 	<name>AO Payments Stripe</name>
