--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
     <relativePath>../../parent/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.aoapps</groupId><artifactId>ao-payments-stripe</artifactId><version>2.0.0-POST-SNAPSHOT</version>
+  <groupId>com.aoapps</groupId><artifactId>ao-payments-stripe</artifactId><version>2.1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <properties>
@@ -46,7 +46,7 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
     <sonar.coverage.exclusions>**.*</sonar.coverage.exclusions>
     <!-- Dependencies -->
     <commons-lang3.version>3.12.0</commons-lang3.version>
-    <stripe-java.version>21.15.0</stripe-java.version>
+    <stripe-java.version>22.0.0</stripe-java.version>
   </properties>
 
   <name>AO Payments Stripe</name>
