--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
     <relativePath>../../parent/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.aoapps</groupId><artifactId>ao-payments-stripe</artifactId><version>2.1.0-SNAPSHOT</version>
+  <groupId>com.aoapps</groupId><artifactId>ao-payments-stripe</artifactId><version>2.1.0</version>
   <packaging>bundle</packaging>
 
   <properties>
@@ -81,7 +81,7 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
     <connection>scm:git:git://github.com/ao-apps/ao-payments-stripe.git</connection>
     <developerConnection>scm:git:git@github.com:ao-apps/ao-payments-stripe.git</developerConnection>
     <url>https://github.com/ao-apps/ao-payments-stripe</url>
-    <tag>HEAD</tag>
+    <tag>ao-payments-stripe-2.1.0</tag>
   </scm>
 
   <issueManagement>
