--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,12 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
     <relativePath>../../parent/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.aoapps</groupId><artifactId>ao-payments-stripe</artifactId><version>3.0.1-SNAPSHOT</version>
+  <groupId>com.aoapps</groupId><artifactId>ao-payments-stripe</artifactId><version>3.0.1</version>
   <packaging>jar</packaging>
 
   <properties>
     <!-- Must be set to ${git.commit.time} for snapshots or ISO 8601 timestamp for releases. -->
-    <project.build.outputTimestamp>${git.commit.time}</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2023-09-25T02:41:35Z</project.build.outputTimestamp>
     <module.name>com.aoapps.payments.stripe</module.name>
     <javadoc.breadcrumbs><![CDATA[<a target="${javadoc.target}" href="https://oss.aoapps.com/">AO OSS</a>
 / <a target="${javadoc.target}" href="https://oss.aoapps.com/payments/">Payments</a>
@@ -80,7 +80,7 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
     <connection>scm:git:git://github.com/ao-apps/ao-payments-stripe.git</connection>
     <developerConnection>scm:git:git@github.com:ao-apps/ao-payments-stripe.git</developerConnection>
     <url>https://github.com/ao-apps/ao-payments-stripe</url>
-    <tag>HEAD</tag>
+    <tag>ao-payments-stripe-3.0.1</tag>
   </scm>
 
   <issueManagement>
