--- a/pom.xml
+++ b/pom.xml
@@ -282,6 +282,9 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
       </dependency>
       <!-- Runtime Transitive -->
       <dependency>
+        <groupId>com.google.errorprone</groupId><artifactId>error_prone_annotations</artifactId><version>2.30.0</version>
+      </dependency>
+      <dependency>
         <groupId>com.google.code.gson</groupId><artifactId>gson</artifactId><version>2.11.0</version>
       </dependency>
     </dependencies>
